--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^1.12.2",
     "axios-miniprogram-adapter": "^0.3.5",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "vant": "^4.9.21"
   },
   "devDependencies": {
