--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
   "dependencies": {
-    "@dcloudio/uni-cli-i18n": "^2.0.2-4070620250821001",
-    "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3000020210521001",
-    "@vant/weapp": "^1.11.7",
-    "axios": "^1.12.2",
-    "axios-miniprogram-adapter": "^0.3.5",
-    "clipboard": "^2.0.11",
     "dayjs": "^1.11.18",
     "pinia": "^3.0.3",
-    "pinia-plugin-persistedstate": "^4.5.0",
-    "rollup-plugin-visualizer": "^6.0.4",
-    "vant": "^4.9.21",
-    "vite": "^6.4.0"
+    "pinia-plugin-persistedstate": "^4.5.0"
   },
   "devDependencies": {
-    "@dcloudio/uni-cli-shared": "^2.0.2-4070620250821001",
     "@vant/auto-import-resolver": "^1.3.0",
     "sass": "^1.63.2",
     "sass-loader": "^10.4.1",
