更新隐私政策

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name" : "watch-t",
+    "name" : "天辰表行",
     "appid" : "__UNI__593BD85",
-    "description" : "",
+    "description" : "大连天辰表行官方小程序！汇聚欧米茄、浪琴、宝玑等 30 + 国际名表，西铁城、ARMANI 辽宁独家代理，Swatch、精工大连总代理，线下 20 + 门店覆盖辽鲁核心商圈，正品销售 + 品牌授权维修一站式服务。",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
